// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator #generate CJS (non-ESM) generates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

| Name                           | Description   |
| :----------------------------- | :------------ |
| [no-foo](docs/rules/no-foo.md) | disallow foo. |

<!-- end auto-generated rules list -->"
`;

exports[`generator #generate CJS (non-ESM) generates the documentation 2`] = `
"# Disallow foo (\`test/no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate Missing plugin package.json \`name\` field throws an error 1`] = `"Could not find \`name\` field in ESLint plugin's package.json."`;

exports[`generator #generate Missing plugin package.json throws an error 1`] = `"Could not find package.json of ESLint plugin."`;

exports[`generator #generate No configs found omits the config column 1`] = `
"<!-- begin auto-generated rules list -->

| Name                           | Description   |
| :----------------------------- | :------------ |
| [no-foo](docs/rules/no-foo.md) | disallow foo. |

<!-- end auto-generated rules list -->"
`;

exports[`generator #generate No configs found omits the config column 2`] = `
"# Disallow foo (\`test/no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate No exported rules object found throws an error 1`] = `"Could not find exported \`rules\` object in ESLint plugin."`;

exports[`generator #generate README missing rule list markers and no rules section throws an error 1`] = `"README.md is missing rules list markers: <!-- begin auto-generated rules list --><!-- end auto-generated rules list -->"`;

exports[`generator #generate README missing rule list markers but with rules section adds rule list markers to rule section 1`] = `
"# eslint-plugin-test

Foo.

## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description            |
| :----------------------------- | :--------------------- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |

<!-- end auto-generated rules list -->

Old rules list.

## Other

Bar."
`;

exports[`generator #generate Rule description needs to be formatted capitalizes the first letter and removes the trailing period from the description 1`] = `
"# Disallow foo (\`test/no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate Scoped plugin name determines the correct plugin prefix 1`] = `
"# Disallow foo (\`@my-scope/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate config that extends another config generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | ✅  |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. | ✅  |
| [no-biz](docs/rules/no-biz.md) | Description of no-biz. | ✅  |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate config that extends another config generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate config that extends another config generates the documentation 3`] = `
"# Description of no-bar (\`test/no-bar\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate config that extends another config generates the documentation 4`] = `
"# Description of no-baz (\`test/no-baz\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate config that extends another config generates the documentation 5`] = `
"# Description of no-biz (\`test/no-biz\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate config with overrides generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate config with overrides generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate deprecated function-style rule generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | 💼 |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate deprecated function-style rule generates the documentation 2`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate deprecated rule with no rule doc but --ignore-deprecated-rules omits the rule from the README and does not try to update its non-existent rule doc 1`] = `
"<!-- begin auto-generated rules list -->

| Name |
| :--- |

<!-- end auto-generated rules list -->"
`;

exports[`generator #generate deprecated rules updates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description. | ❌  |
| [no-baz](docs/rules/no-baz.md) | Description. | ❌  |
| [no-biz](docs/rules/no-biz.md) | Description. |    |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generator #generate deprecated rules updates the documentation 2`] = `
"# Description (\`test/no-foo\`)

❌ This rule is deprecated. It was replaced by [\`no-bar\`](no-bar.md).

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate deprecated rules updates the documentation 3`] = `
"# Description (\`test/no-bar\`)

❌ This rule is deprecated.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate deprecated rules updates the documentation 4`] = `
"# Description (\`test/no-baz\`)

❌ This rule is deprecated.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate deprecated rules updates the documentation 5`] = `
"# Description (\`test/no-biz\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate lowercase README file generates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->"
`;

exports[`generator #generate no existing comment markers - minimal doc content generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| Name                           | Description            | 🔧 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🔧 |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate no existing comment markers - minimal doc content generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate no existing comment markers - with no blank lines in existing content generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| Name                           | Description            | 🔧 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🔧 |

<!-- end auto-generated rules list -->
Existing rules section content."
`;

exports[`generator #generate no existing comment markers - with no blank lines in existing content generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

<!-- end auto-generated rule header -->
Existing rule doc content."
`;

exports[`generator #generate no existing comment markers - with one blank line around existing content generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| Name                           | Description            | 🔧 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🔧 |

<!-- end auto-generated rules list -->

Existing rules section content."
`;

exports[`generator #generate no existing comment markers - with one blank line around existing content generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

<!-- end auto-generated rule header -->

Existing rule doc content."
`;

exports[`generator #generate no rules with description generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate no rules with description generates the documentation 2`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate one rule missing description generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description             |
| :----------------------------- | :---------------------- |
| [no-bar](docs/rules/no-bar.md) |                         |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate one rule missing description generates the documentation 2`] = `
"# Description for no-foo (\`test/no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate one rule missing description generates the documentation 3`] = `
"# test/no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate only a \`recommended\` config updates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description  | 💼 |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ✅  |

<!-- end auto-generated rules list -->"
`;

exports[`generator #generate only a \`recommended\` config updates the documentation 2`] = `
"# Description (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule config with options generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rule config with options generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule doc without header marker but pre-existing header updates the documentation 1`] = `
"# Description (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
Pre-existing notice about the rule being recommended.
## Rule details
Details."
`;

exports[`generator #generate rule with long-enough description to require name column wrapping avoidance adds spaces to the name column 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           | Description                                                                         |
| :----------------------------- | :---------------------------------------------------------------------------------- |
| [no-foo](docs/rules/no-foo.md) | over 60 chars over 60 chars over 60 chars over 60 chars over 60 chars over 60 chars |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rule with long-enough description to require name column wrapping avoidance adds spaces to the name column 2`] = `
"# Over 60 chars over 60 chars over 60 chars over 60 chars over 60 chars over 60 chars (\`test/no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule with long-enough description to require name column wrapping avoidance but rule name too short does not add spaces to name column 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                     | Description                                                                         |
| :----------------------- | :---------------------------------------------------------------------------------- |
| [foo](docs/rules/foo.md) | over 60 chars over 60 chars over 60 chars over 60 chars over 60 chars over 60 chars |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rule with long-enough description to require name column wrapping avoidance but rule name too short does not add spaces to name column 2`] = `
"# Over 60 chars over 60 chars over 60 chars over 60 chars over 60 chars over 60 chars (\`test/foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule with no meta object generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | 💼 |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rule with no meta object generates the documentation 2`] = `
"# test/no-foo

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule with type, type column enabled displays the type 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🗂️ The type of rule.\\
❗ Identifies problems that could cause errors or unexpected behavior.\\
📖 Identifies potential improvements.\\
📏 Focuses on code formatting.

| Name                           | 🗂️ |
| :----------------------------- | :-- |
| [no-bar](docs/rules/no-bar.md) | 📖  |
| [no-biz](docs/rules/no-biz.md) | 📏  |
| [no-boz](docs/rules/no-boz.md) |     |
| [no-buz](docs/rules/no-buz.md) |     |
| [no-foo](docs/rules/no-foo.md) | ❗   |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rule with type, type column enabled displays the type 2`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule with type, type column enabled displays the type 3`] = `
"# test/no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule with type, type column enabled displays the type 4`] = `
"# test/no-biz

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule with type, type column enabled displays the type 5`] = `
"# test/no-boz

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule with type, type column enabled displays the type 6`] = `
"# test/no-buz

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule with type, type column enabled, but only an unknown type hides the type column and notice 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rule with type, type column enabled, but only an unknown type hides the type column and notice 2`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rule with type, type column not enabled hides the type column 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rule with type, type column not enabled hides the type column 2`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
⚠️ Configurations set to warn in.\\
🚫 Configurations disabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 | ⚠️           | 🚫           |
| :----------------------------- | :--------------------- | :- | :----------- | :----------- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. |    |              | ![other][] ✅ |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. | ✅  |              | ![other][]   |
| [no-bez](docs/rules/no-bez.md) | Description of no-bez. |    | ![other][]   |              |
| [no-biz](docs/rules/no-biz.md) | Description of no-biz. |    |              | ![other][]   |
| [no-boz](docs/rules/no-boz.md) | Description of no-boz. |    | ✅            |              |
| [no-buz](docs/rules/no-buz.md) | Description of no-buz. |    | ![other][] ✅ |              |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |    |              | ✅            |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rules that are disabled or set to warn generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

🚫 This rule is _disabled_ in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn generates the documentation 3`] = `
"# Description of no-bar (\`test/no-bar\`)

🚫 This rule is _disabled_ in the following configs: \`other\`, ✅ \`recommended\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn generates the documentation 4`] = `
"# Description of no-baz (\`test/no-baz\`)

💼🚫 This rule is enabled in the ✅ \`recommended\` config. This rule is _disabled_ in the \`other\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn generates the documentation 5`] = `
"# Description of no-biz (\`test/no-biz\`)

🚫 This rule is _disabled_ in the \`other\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn generates the documentation 6`] = `
"# Description of no-boz (\`test/no-boz\`)

⚠️ This rule _warns_ in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn generates the documentation 7`] = `
"# Description of no-buz (\`test/no-buz\`)

⚠️ This rule _warns_ in the following configs: \`other\`, ✅ \`recommended\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn generates the documentation 8`] = `
"# Description of no-bez (\`test/no-bez\`)

⚠️ This rule _warns_ in the \`other\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn, only one config present generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

⚠️ Configurations set to warn in.\\
🚫 Configurations disabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | ⚠️ | 🚫 |
| :----------------------------- | :--------------------- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. |    | ✅  |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |    |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rules that are disabled or set to warn, only one config present generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

⚠️ This rule _warns_ in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn, only one config present generates the documentation 3`] = `
"# Description of no-bar (\`test/no-bar\`)

🚫 This rule is _disabled_ in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate rules that are disabled or set to warn, two configs present generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

⚠️ Configurations set to warn in.\\
🚫 Configurations disabled in.\\
✅ Set in the \`recommended\` configuration.\\
⌨️ Set in the \`typescript\` configuration.

| Name                           | Description            | ⚠️ | 🚫 |
| :----------------------------- | :--------------------- | :- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  | ⌨️ |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate rules that are disabled or set to warn, two configs present generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

⚠️🚫 This rule _warns_ in the ✅ \`recommended\` config. This rule is _disabled_ in the ⌨️ \`typescript\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate shows column and notice for requiresTypeChecking updates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
💭 Requires type information.

| Name                           | Description            | 💼 | 💭 |
| :----------------------------- | :--------------------- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. |    | 💭 |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 |    |

<!-- end auto-generated rules list -->"
`;

exports[`generator #generate shows column and notice for requiresTypeChecking updates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

💼 This rule is enabled in the 🌐 \`all\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate shows column and notice for requiresTypeChecking updates the documentation 3`] = `
"# Description of no-bar (\`test/no-bar\`)

💭 This rule requires type information.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate sorting rules and configs case-insensitive sorts correctly 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.

| Name                 | 💼                   |
| :------------------- | :------------------- |
| [a](docs/rules/a.md) | ![a][] ![B][] ![c][] |
| [B](docs/rules/B.md) |                      |
| [c](docs/rules/c.md) |                      |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate sorting rules and configs case-insensitive sorts correctly 2`] = `
"# test/a

💼 This rule is enabled in the following configs: \`a\`, \`B\`, \`c\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate sorting rules and configs case-insensitive sorts correctly 3`] = `
"# test/B

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate sorting rules and configs case-insensitive sorts correctly 4`] = `
"# test/c

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate splitting list by nested property meta.docs.category splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

### candy

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

### fruits

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate splitting list by type splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-biz](docs/rules/no-biz.md) |

### problem

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

### suggestion

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |
| [no-baz](docs/rules/no-baz.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate splitting list, ignores case splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

### a

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

### B

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

### c

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate splitting list, with boolean splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💡 Manually fixable by [editor suggestions](https://eslint.org/docs/developer-guide/working-with-rules#providing-suggestions).

| Name                           | 💡 |
| :----------------------------- | :- |
| [no-bar](docs/rules/no-bar.md) |    |
| [no-baz](docs/rules/no-baz.md) |    |

### Has Suggestions

| Name                           | 💡 |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | 💡 |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate splitting list, with one sub-list having no rules enabled by the config splits the list and still uses recommended config emoji in both lists 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

### bar

| Name                           | 💼 |
| :----------------------------- | :- |
| [no-bar](docs/rules/no-bar.md) |    |

### foo

| Name                           | 💼 |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate splitting list, with unknown variable type splits the list but does not attempt to convert variable name to title 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

### foo_barBIZ-baz3bOz

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate successful updates the documentation 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🌐 Set in the \`all\` configuration.\\
✅ Set in the \`recommended\` configuration.\\
🎨 Set in the \`style\` configuration.\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/developer-guide/working-with-rules#providing-suggestions).

| Name                           | Description            | 💼    | 🔧 | 💡 |
| :----------------------------- | :--------------------- | :---- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | 🌐 🎨 | 🔧 |    |
| [no-baz](docs/rules/no-baz.md) | Description of no-boz. |       |    |    |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🌐 ✅  | 🔧 | 💡 |

<!-- end auto-generated rules list -->
more content."
`;

exports[`generator #generate successful updates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

💼 This rule is enabled in the following configs: 🌐 \`all\`, ✅ \`recommended\`.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/developer-guide/working-with-rules#providing-suggestions).

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation"
`;

exports[`generator #generate successful updates the documentation 3`] = `
"# Description of no-bar (\`test/no-bar\`)

💼 This rule is enabled in the following configs: 🌐 \`all\`, 🎨 \`style\`.

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

<!-- end auto-generated rule header -->
## Rule details
details"
`;

exports[`generator #generate successful updates the documentation 4`] = `
"# Description of no-boz (\`test/no-baz\`)

<!-- end auto-generated rule header -->
## Rule details
details"
`;

exports[`generator #generate with \`--rule-doc-title-format\` option = desc uses the right rule doc title format 1`] = `
"# Description for no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--rule-doc-title-format\` option = desc uses the right rule doc title format 2`] = `
"# test/no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--rule-doc-title-format\` option = desc-parens-name uses the right rule doc title format 1`] = `
"# Description for no-foo (\`no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--rule-doc-title-format\` option = desc-parens-name uses the right rule doc title format 2`] = `
"# no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--rule-doc-title-format\` option = desc-parens-prefix-name uses the right rule doc title format, with fallback when missing description 1`] = `
"# Description for no-foo (\`test/no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--rule-doc-title-format\` option = desc-parens-prefix-name uses the right rule doc title format, with fallback when missing description 2`] = `
"# test/no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--rule-doc-title-format\` option = name uses the right rule doc title format 1`] = `
"# no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--rule-doc-title-format\` option = prefix-name uses the right rule doc title format 1`] = `
"# test/no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--url-configs\` option includes the config link 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 [Configurations](http://example.com/configs) enabled in.\\
✅ Set in the \`recommended\` [configuration](http://example.com/configs).

| Name                           | Description             | 💼                |
| :----------------------------- | :---------------------- | :---------------- |
| [no-bar](docs/rules/no-bar.md) | Description for no-bar. | ![customConfig][] |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅                 |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate with \`--url-configs\` option includes the config link 2`] = `
"# Description for no-foo (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` [config](http://example.com/configs).

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--url-configs\` option includes the config link 3`] = `
"# Description for no-bar (\`test/no-bar\`)

💼 This rule is enabled in the \`customConfig\` [config](http://example.com/configs).

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with \`--url-configs\` option with only recommended config includes the config link 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 [Configurations](http://example.com/configs) enabled in.\\
✅ Set in the \`recommended\` [configuration](http://example.com/configs).

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate with \`--url-configs\` option with only recommended config includes the config link 2`] = `
"# Description for no-foo (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` [config](http://example.com/configs).

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with --check prints the issues, exits with failure, and does not write changes 1`] = `
[
  "[32m- Expected[39m
[31m+ Received[39m

[32m- # Description for no-foo (\`test/no-foo\`)[39m
[32m-[39m
[32m- <!-- end auto-generated rule header -->[39m
[32m-[39m
[31m+ # test/no-foo[39m",
]
`;

exports[`generator #generate with --check prints the issues, exits with failure, and does not write changes 2`] = `
[
  "[32m- Expected[39m
[31m+ Received[39m

[2m  ## Rules[22m
[32m- <!-- begin auto-generated rules list -->[39m
[32m-[39m
[32m- | Name                           | Description             |[39m
[32m- | :----------------------------- | :---------------------- |[39m
[32m- | [no-foo](docs/rules/no-foo.md) | Description for no-foo. |[39m
[32m-[39m
[32m- <!-- end auto-generated rules list -->[39m
",
]
`;

exports[`generator #generate with --check prints the issues, exits with failure, and does not write changes 3`] = `
"## Rules
"
`;

exports[`generator #generate with --check prints the issues, exits with failure, and does not write changes 4`] = `"# test/no-foo"`;

exports[`generator #generate with --config-emoji and removing default emoji for a config reverts to using a badge for the config 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.

| Name                           | Description             | 💼               |
| :----------------------------- | :---------------------- | :--------------- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ![recommended][] |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate with --config-emoji and removing default emoji for a config reverts to using a badge for the config 2`] = `
"# Description for no-foo (\`test/no-foo\`)

💼 This rule is enabled in the \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with --config-emoji shows the correct emojis 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
🔥 Set in the \`recommended\` configuration.\\
🎨 Set in the \`stylistic\` configuration.

| Name                           | Description             | 💼                         |
| :----------------------------- | :---------------------- | :------------------------- |
| [no-bar](docs/rules/no-bar.md) | Description for no-bar. | 🔥 🎨                      |
| [no-baz](docs/rules/no-baz.md) | Description for no-boz. | ![configWithoutEmoji][] 🎨 |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | 🔥                         |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate with --config-emoji shows the correct emojis 2`] = `
"# Description for no-foo (\`test/no-foo\`)

💼 This rule is enabled in the 🔥 \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with --config-emoji shows the correct emojis 3`] = `
"# Description for no-bar (\`test/no-bar\`)

💼 This rule is enabled in the following configs: 🔥 \`recommended\`, 🎨 \`stylistic\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with --config-emoji shows the correct emojis 4`] = `
"# Description for no-boz (\`test/no-baz\`)

💼 This rule is enabled in the following configs: \`configWithoutEmoji\`, 🎨 \`stylistic\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with --ignore-config hides the ignored config 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate with --ignore-config hides the ignored config 2`] = `
"# Description for no-foo (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with --rule-doc-notices shows the right rule doc notices 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).\\
💡 Manually fixable by [editor suggestions](https://eslint.org/docs/developer-guide/working-with-rules#providing-suggestions).\\
❌ Deprecated.

| Name                           | Description             | 🔧 | 💡 | ❌  |
| :----------------------------- | :---------------------- | :- | :- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | 🔧 | 💡 | ❌  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate with --rule-doc-notices shows the right rule doc notices 2`] = `
"# Description for no-foo (\`test/no-foo\`)

💡 This rule is manually fixable by [editor suggestions](https://eslint.org/docs/developer-guide/working-with-rules#providing-suggestions).

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

❌ This rule is deprecated.

❗ This rule identifies problems that could cause errors or unexpected behavior.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with --rule-list-columns shows the right columns and legend 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💡 Manually fixable by [editor suggestions](https://eslint.org/docs/developer-guide/working-with-rules#providing-suggestions).\\
🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| 💡 | 🔧 | Name                           |
| :- | :- | :----------------------------- |
| 💡 | 🔧 | [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate with --rule-list-columns shows the right columns and legend 2`] = `
"# Description for no-foo (\`test/no-foo\`)

❌ This rule is deprecated.

🔧💡 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix) and manually fixable by [editor suggestions](https://eslint.org/docs/developer-guide/working-with-rules#providing-suggestions).

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with config that does not have any rules uses recommended config emoji since it is the only relevant config 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate with config that does not have any rules uses recommended config emoji since it is the only relevant config 2`] = `
"# Description for no-foo (\`test/no-foo\`)

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generator #generate with no blank lines around comment markers generates the documentation 1`] = `
"# Rules

No blank line after this.
<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| Name                           | Description            | 🔧 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🔧 |

<!-- end auto-generated rules list -->
No blank line before this."
`;

exports[`generator #generate with no blank lines around comment markers generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

<!-- end auto-generated rule header -->
No blank line before this."
`;

exports[`generator #generate with one blank line around comment markers generates the documentation 1`] = `
"# Rules

One blank line after this.

<!-- begin auto-generated rules list -->

🔧 Automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/user-guide/command-line-interface#--fix).

| Name                           | Description            | 🔧 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | 🔧 |

<!-- end auto-generated rules list -->

One blank line before this."
`;

exports[`generator #generate with one blank line around comment markers generates the documentation 2`] = `
"# Description of no-foo (\`test/no-foo\`)

🔧 This rule is automatically fixable by the [\`--fix\` CLI option](https://eslint.org/docs/latest/user-guide/command-line-interface#--fix).

<!-- end auto-generated rule header -->

One blank line before this."
`;

exports[`generator #generate with one config that does not have emoji shows the default config emoji 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.

| Name                           | Description             | 💼                      |
| :----------------------------- | :---------------------- | :---------------------- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ![configWithoutEmoji][] |

<!-- end auto-generated rules list -->
"
`;

exports[`generator #generate with one config that does not have emoji shows the default config emoji 2`] = `
"# Description for no-foo (\`test/no-foo\`)

💼 This rule is enabled in the \`configWithoutEmoji\` config.

<!-- end auto-generated rule header -->
"
`;
